<!-- Copyright (c) Colin Miller 2019. -->

<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">BattleJournal</string>
    <string name="facebook_application_id">1178379798989148</string>
    <string name="facebook_app_id" tools:keep="@string/facebook_app_id">1178379798989148</string>
    <string name="fb_login_protocol_scheme" tools:keep="@string/fb_login_protocol_scheme">fb1178379798989148</string>
    <string name="logout">Logout</string>
    <string name="save">Save</string>

    <!-- login/logout stuff -->
    <string name="was_loggedout">You are no longer logged in</string>
    <string name="armies">Armies</string>

    <!-- Army Edit -->
    <string name="add_army">Add An Army</string>
    <string name="army_name">Army Name</string>
    <string name="select_faction">Select a faction</string>
    <string name="delete">Delete</string>
    <string name="delete_success">%1$s deleted successfully</string>
    <string name="delete_failure">Oddly, I couldn\'t delete this army</string>
    <string name="alliance">Alliance Goes Here</string>
    <string name="Opponent">Opponent</string>
    <string name="opponent_faction">Opponent\'s Faction</string>
    <string name="game_result">Game Result</string>
    <string name="match_type">Match Type</string>
    <string name="game_date">Game Date</string>
    <string name="formatted_date">%1$d/%2$d/%3$d</string>
    <string name="my_points">My Points</string>
    <string name="opponents_points">Opponents Points</string>
    <string name="notes">Notes</string>
</resources>
